--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.6.7",
+        "@heroicons/vue": "^1.0.6"
     }
 }
