--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.11",
         "laravel/pint": "^1.0",
