PIKA-10 deployment with envoy

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.7",
         "lorisleiva/laravel-actions": "^2.4",
         "phlak/semver": "^4.0",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "vlucas/phpdotenv": "^5.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
