--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "inikoo/pika",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Pika.",
+    "keywords": ["aiku", "warehouse"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
