--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "ext-curl": "*",
+        "ext-pdo": "*",
         "commerceguys/addressing": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.5.4",
@@ -16,9 +17,9 @@
         "laravel/tinker": "^2.7",
         "lorisleiva/laravel-actions": "^2.4",
         "phlak/semver": "^4.0",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "tightenco/ziggy": "^1.0",
-        "vlucas/phpdotenv": "^5.4",
-      "ext-pdo": "*"
+        "vlucas/phpdotenv": "^5.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
