PIKA-36 Mass Org Source fetching + install and use Horizon

--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/framework": "^9.19",
+        "laravel/horizon": "^5.10",
         "laravel/sanctum": "^2.8",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laravolt/avatar": "^4.1",
         "lorisleiva/laravel-actions": "^2.4",
+        "opcodesio/log-viewer": "^1.2",
         "phlak/semver": "^4.0",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.5",
