PIKA-27 Employes UI

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "@headlessui/vue": "^1.6.7",
         "@heroicons/vue": "^1.0.6",
+        "@protonemedia/inertiajs-tables-laravel-query-builder": "^2.1.0",
         "pinia": "^2.0.20"
     }
 }
