--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,10 @@
         "lorisleiva/laravel-actions": "^2.4",
         "opcodesio/log-viewer": "^1.2",
         "phlak/semver": "^4.0",
+        "protonemedia/inertiajs-tables-laravel-query-builder": "^2.0",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-query-builder": "^5.0",
         "tightenco/ziggy": "^1.0",
         "vlucas/phpdotenv": "^5.4"
     },
@@ -37,7 +39,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "wulfheart/laravel-actions-ide-helper": "^0.3.0"
     },
     "autoload": {
         "psr-4": {
