--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
         "@tailwindcss/forms": "^0.5.2",
+        "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^3.0.0",
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.2",
@@ -22,6 +23,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-brands-svg-icons": "^6.1.2",
         "@fortawesome/free-regular-svg-icons": "^6.1.2",
         "@fortawesome/free-solid-svg-icons": "^6.1.2",
