--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "opcodesio/log-viewer": "^1.2",
         "phlak/semver": "^4.0",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^2.0",
+        "sentry/sentry-laravel": "^2.13",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0",
