--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "commerceguys/intl": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.5.4",
+        "jackwh/laravel-new-relic": "^1.0",
         "laravel/framework": "^9.19",
         "laravel/horizon": "^5.10",
         "laravel/sanctum": "^2.8",
