PIKA-49 Get an avatar when creating user + public folder tenant aware

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@headlessui/vue": "^1.7.0",
         "@heroicons/vue": "^1.0.6",
         "@protonemedia/inertiajs-tables-laravel-query-builder": "^2.1.0",
+        "@vue-hero-icons/outline": "^1.7.2",
+        "@vue-hero-icons/solid": "^1.7.2",
         "laravel-vue-i18n": "^2.2.2",
         "pinia": "^2.0.20",
         "vue-cookies": "^1.8.1"
