--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-curl": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
+        "ext-gd": "*",
         "commerceguys/addressing": "^1.4",
         "commerceguys/intl": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
