--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,24 @@
-APP_NAME=Laravel
+APP_NAME=pika
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_CENTRAL_DOMAIN=pika.test
+APP_URL=http://pika.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=pika
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -56,3 +56,51 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PO_EDITOR_READ_ONLY_API_KEY=
+
+PRODUCTION_API_URL=
+PRODUCTION_API_KEY=
+STAGING_API_URL=
+STAGING_API_KEY=
+
+PRODUCTION_ADMIN_EMAIL=
+PRODUCTION_ADMIN_NANE=
+PRODUCTION_ADMIN_CODE=
+
+DEPLOYMENT_HOST=
+DEPLOYMENT_USER=
+DEPLOYMENT_PATH=
+
+AURORA_DB_HOST=
+AURORA_DB_USERNAME=
+AURORA_DB_PASSWORD=
+AURORA_IMAGE_PATH=
+AURORA_DOMAIN=
+
+POEDITOR_API_KEY=
+POEDITOR_PROJECT_ID=
+
+TENANTS_DATA=
+
+DB_DATABASE_IDE_HELPER=
+
+ADMIN_CODE=
+ADMIN_NAME=
+ADMIN_EMAIL=
+
+SENTRY_LARAVEL_DSN=null
+LARAVEL_CLOUDFLARE_ENABLED=false
+REQUEST_LOGGING_ENABLED=true
+
+IRIS_URL=
+IRIS_TOKEN=
+
+CLOUDFLARE_R2_ACCESS_KEY=
+CLOUDFLARE_R2_SECRET_KEY=
+CLOUDFLARE_R2_BUCKET=
+CLOUDFLARE_R2_ENDPOINT=
+MEDIA_DISK=public
+MEDIA_DOMAIN=
+
+TELESCOPE_ENABLED=true
