--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,20 @@
     "keywords": ["aiku", "warehouse"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-curl": "*",
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
         "ext-zlib": "*",
+        "ext-pgsql": "*",
+        "ext-mysql": "*",
         "akempes/laravel-request-logging": "^1.2",
+        "aws/aws-sdk-php": "^3.255",
         "commerceguys/addressing": "^1.4",
         "commerceguys/intl": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.5.4",
+        "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
         "laravel/framework": "^9",
         "laravel/horizon": "^5",
