PKA-4 dashboard tv

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,10 @@
         "ext-curl": "*",
         "ext-gd": "*",
         "ext-intl": "*",
-        "ext-pdo": "*",
-        "ext-zlib": "*",
-        "ext-pgsql": "*",
-        "ext-mysql": "*",
         "ext-mbstring": "*",
+        "ext-pdo": "*",
+        "ext-pgsql": "*",
+        "ext-zlib": "*",
         "akempes/laravel-request-logging": "^1.2",
         "aws/aws-sdk-php": "^3.255",
         "commerceguys/addressing": "^1.4",
@@ -32,6 +31,7 @@
         "monicahq/laravel-cloudflare": "^3.3",
         "opcodesio/log-viewer": "^1.2",
         "phlak/semver": "^4.0",
+        "predis/predis": "^2.1",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^2.0",
         "sentry/sentry-laravel": "^3",
         "spatie/laravel-medialibrary": "^10.0.0",
