--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "aws/aws-sdk-php": "^3.255",
         "commerceguys/addressing": "^1.4",
         "commerceguys/intl": "^1.1",
+        "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
