--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
         "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.7",
-        "@inertiajs/server": "^0.1.0",
         "@prettier/plugin-php": "^0.19.2",
         "@tailwindcss/forms": "^0.5.2",
         "@types/ziggy-js": "^1.3.2",
@@ -31,6 +27,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.2",
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "@headlessui/vue": "^1.7.0",
+        "@inertiajs/vue3": "^1.0.0",
         "@protonemedia/inertiajs-tables-laravel-query-builder": "^2.1.0",
         "@vue-hero-icons/outline": "^1.7.2",
         "@vue-hero-icons/solid": "^1.7.2",
