PKA-60 Preparing DB (central tables)

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=central
 DB_HOST=127.0.0.1
 DB_DATABASE=pika
 DB_USERNAME=root
