--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "protonemedia/inertiajs-tables-laravel-query-builder": "^2.0",
         "sentry/sentry-laravel": "^3.2",
         "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-multitenancy": "^3.0",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-sluggable": "^3.4",
