--- a/.env.example
+++ b/.env.example
@@ -104,3 +104,7 @@ MEDIA_DISK=public
 MEDIA_DOMAIN=
 
 TELESCOPE_ENABLED=true
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://127.0.0.1:7700
+MEILISEARCH_KEY=
