--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,19 @@
         "commerceguys/intl": "^1.1",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
         "laravel/framework": "^9",
         "laravel/horizon": "^5",
         "laravel/sanctum": "^2",
+        "laravel/scout": "^10.0",
         "laravel/socialite": "^5",
         "laravel/tinker": "^2",
         "laravolt/avatar": "^4",
         "league/flysystem-aws-s3-v3": "^3.0",
         "lorisleiva/laravel-actions": "^2.4",
+        "meilisearch/meilisearch-php": "^1.0",
         "monicahq/laravel-cloudflare": "^3.3",
         "opcodesio/log-viewer": "^1.2",
         "phlak/semver": "^4.0",
