--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "devDependencies": {
         "@prettier/plugin-php": "^0.19.2",
         "@tailwindcss/forms": "^0.5.2",
+        "@types/lodash-es": "^4.17.7",
+        "@types/qs": "^6.9.7",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^3.0.0",
         "@vue/server-renderer": "^3.2.31",
@@ -32,7 +34,9 @@
         "@vue-hero-icons/outline": "^1.7.2",
         "@vue-hero-icons/solid": "^1.7.2",
         "laravel-vue-i18n": "^2.2.2",
+        "lodash-es": "^4.17.21",
         "pinia": "^2.0.20",
+        "qs": "^6.11.1",
         "vue-cookies": "^1.8.1",
         "vue-tel-input": "^6.0.5"
     }
