PKA-170 Change project name from pika to aiku

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "inikoo/pika",
+    "name": "inikoo/aiku",
     "type": "project",
-    "description": "Pika.",
+    "description": "aiku.",
     "keywords": ["aiku", "warehouse"],
     "license": "MIT",
     "require": {
