--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=pika
+APP_NAME=aiku
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_CENTRAL_DOMAIN=pika.test
-APP_URL=http://pika.test
+APP_CENTRAL_DOMAIN=aiku.test
+APP_URL=http://aiku.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=central
 DB_HOST=127.0.0.1
-DB_DATABASE=pika
+DB_DATABASE=aiku
 DB_USERNAME=root
 DB_PASSWORD=secret
 
