PKA-399 Upgrade laravel from 9 to 10

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "ext-pdo": "*",
         "ext-pgsql": "*",
         "ext-zlib": "*",
-        "akempes/laravel-request-logging": "^1.2",
         "aws/aws-sdk-php": "^3.255",
         "commerceguys/addressing": "^1.4",
         "commerceguys/intl": "^1.1",
@@ -25,13 +24,12 @@
         "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
-        "laravel/framework": "^9",
+        "laravel/framework": "^10",
         "laravel/horizon": "^5",
-        "laravel/sanctum": "^2",
+        "laravel/sanctum": "^3",
         "laravel/scout": "^10.0",
         "laravel/socialite": "^5",
         "laravel/tinker": "^2",
-        "laravolt/avatar": "^4",
         "league/flysystem-aws-s3-v3": "^3.0",
         "lorisleiva/laravel-actions": "^2.4",
         "meilisearch/meilisearch-php": "^1.0",
@@ -60,13 +58,12 @@
         "laravel/breeze": "^1.11",
         "laravel/envoy": "^2.8",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
+        "laravel/sail": "^1.18",
         "laravel/telescope": "^4.9",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0",
-        "wulfheart/laravel-actions-ide-helper": "^0.3.0"
+        "nunomaduro/collision": "^7",
+        "phpunit/phpunit": "^10",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
