--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build && vite build --ssr"
+        "build": "vite build && vite build --ssr",
+        "test": "cypress open"
     },
     "devDependencies": {
         "@prettier/plugin-php": "^0.19.2",
@@ -14,6 +15,7 @@
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.2",
         "axios": "^0.27",
+        "cypress": "^12.11.0",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
