--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "propaganistas/laravel-phone": "^5.0",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^2.0",
         "sentry/sentry-laravel": "^3.2",
+        "spatie/laravel-backup": "^8.1",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-multitenancy": "^3.0",
         "spatie/laravel-permission": "^5.5",
