--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
         "@headlessui/vue": "^1.7.0",
         "@inertiajs/vue3": "^1.0.0",
         "@protonemedia/inertiajs-tables-laravel-query-builder": "^2.1.0",
+        "@tiptap/pm": "^2.0.3",
+        "@tiptap/starter-kit": "^2.0.3",
+        "@tiptap/vue-3": "^2.0.3",
         "@vue-hero-icons/outline": "^1.7.2",
         "@vue-hero-icons/solid": "^1.7.2",
         "@vueform/multiselect": "^2.6.2",
