PKA-522 Form Fields: Richtext Editor use Tiptap Library

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
         "@headlessui/vue": "^1.7.0",
         "@inertiajs/vue3": "^1.0.0",
         "@protonemedia/inertiajs-tables-laravel-query-builder": "^2.1.0",
+        "@tiptap/extension-character-count": "^2.0.3",
+        "@tiptap/extension-list-item": "^2.0.3",
+        "@tiptap/extension-placeholder": "^2.0.3",
+        "@tiptap/extension-underline": "^2.0.3",
         "@tiptap/pm": "^2.0.3",
         "@tiptap/starter-kit": "^2.0.3",
         "@tiptap/vue-3": "^2.0.3",
