--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel-test@pullreq
+name: Laravel
 
 on:
   push:
@@ -14,12 +14,12 @@ jobs:
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
-        php-version: '8.0'
+        php-version: '8.2'
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Update composer
-      run: composer update
+    - name: Install Node Dependencies
+      run: npm install
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
