--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,9 @@
-name: Laravel Test On Push Request
+name: Laravel Test On Push To Main
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ "experimental" ]
+
 
 jobs:
   laravel-tests:
