--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: test
-      run: pwd
+    - name: Checkout
+      uses: actions/checkout@v3
 
