--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,22 @@ on:
 
 jobs:
   laravel-tests:
+    name: Run tests 🧪
 
     runs-on: self-hosted
 
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Install npm
+        with:
+          fetch-depth: 2
+      - name: Npm install
         run: npm ci
-      - name: file changes
-        uses: trilom/file-changes-action@v1.2.4
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+      - name: List all changed files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
