--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,9 @@ jobs:
     name: Run tests 🧪
 
     runs-on: self-hosted
-
+    defaults:
+      run:
+        working-directory: testing
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
