GitHub action (test on push) - change working directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,7 @@ jobs:
   laravel-tests:
     name: Run tests 🧪
 
-    runs-on: self-hosted
-    defaults:
-      run:
-        working-directory: testing
+    runs-on: testing
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
