--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,17 +15,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - name: Npm install
-        run: npm ci
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v35
-      - name: List all changed files
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
-      - name: Install composer dependencies
+      - name: Npm install
+        if: contains(steps.changed-files.outputs.all_changed_files,'package-lock.json')
+        run: npm ci
+      - name: Composer install
+        if: contains(steps.changed-files.outputs.all_changed_files,'composer.lock')
         run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Prepare environment
-        run:  ln -s ../../../../env.testing .env.testing
+        run:  |
+          ln -s ../../../../env.testing .env.testing
+          ln -s ../../../../env.testing .env
+      - name: Generate database dumps 📚
+        run: ./generate_testing_db_dumps.sh $TESTING_DB_PORT
