--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
           ln -s ../../../../env.testing .env.testing
           ln -s ../../../../env.testing .env
       - name: Generate database dumps 📚
-        run: ./generate_testing_db_dumps.sh $TESTING_DB_PORT
+        run: ./generate_testing_db_dumps.sh ${{vars.TESTING_DB_PORT}}
