--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
     "require-dev": {
         "amphibee/laravel-pint-pre-commit": "^1.5",
         "barryvdh/laravel-ide-helper": "^2.12",
+        "deployer/deployer": "^7.3",
         "fakerphp/faker": "^1.9.1",
         "laracasts/cypress": "^3.0",
         "laravel/breeze": "^1.11",
