--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-multitenancy": "^3.0",
+        "spatie/laravel-options": "^1.1",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-sluggable": "^3.4",
