--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "doctrine/dbal": "^3.5",
         "elasticsearch/elasticsearch": "^8.8",
         "guzzlehttp/guzzle": "^7.2",
+        "hisorange/browser-detect": "^4.5",
         "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
