PKA-709 Get client location store in ES

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-sluggable": "^3.4",
         "spatie/temporary-directory": "^2.1",
+        "stevebauman/location": "^6.6",
         "tightenco/ziggy": "^1.0",
         "vemcogroup/laravel-translation": "^3.0",
         "vlucas/phpdotenv": "^5.4"
