PKA-732 Create history using laravel audit in users part

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "meilisearch/meilisearch-php": "^1.0",
         "monicahq/laravel-cloudflare": "^3.3",
         "opcodesio/log-viewer": "^1.2",
+        "owen-it/laravel-auditing": "^13.5",
         "phlak/semver": "^4.0",
         "predis/predis": "^2.1",
         "propaganistas/laravel-phone": "^5.0",
