PKA-796 Adding route in the universal search

--- a/.env.example
+++ b/.env.example
@@ -110,3 +110,4 @@ TELESCOPE_ENABLED=true
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://127.0.0.1:7700
 MEILISEARCH_KEY=
+SCOUT_DRIVER=Matchish\ScoutElasticSearch\Engines\ElasticSearchEngine
