--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "lorisleiva/laravel-actions": "^2.4",
         "maatwebsite/excel": "^3.1",
+        "matchish/laravel-scout-elasticsearch": "^7.2",
         "meilisearch/meilisearch-php": "^1.0",
         "monicahq/laravel-cloudflare": "^3.3",
         "opcodesio/log-viewer": "^1.2",
