--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@inertiajs/vue3": "^1.0.0",
         "@revolist/revo-dropdown": "^2.0.1",
         "@revolist/revogrid-column-date": "^2.0.0",
+        "@revolist/revogrid-column-numeral": "^1.0.2",
         "@revolist/revogrid-column-select": "^2.0.2",
         "@revolist/vue3-datagrid": "^3.2.17",
         "@tiptap/extension-character-count": "^2.0.3",
