PKA-851 Create invoices pdf

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "matchish/laravel-scout-elasticsearch": "^7.2",
         "meilisearch/meilisearch-php": "^1.0",
         "monicahq/laravel-cloudflare": "^3.3",
+        "mpdf/qrcode": "^1.2",
         "opcodesio/log-viewer": "^1.2",
         "owen-it/laravel-auditing": "^13.5",
         "phlak/semver": "^4.0",
