--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ext-zlib": "*",
         "amrshawky/laravel-currency": "^6.0",
         "aws/aws-sdk-php": "^3.255",
+        "aws/aws-sdk-php-laravel": "^3.8",
         "carlos-meneses/laravel-mpdf": "^2.1",
         "commerceguys/addressing": "^1.4",
         "commerceguys/intl": "^1.1",
