--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "qs": "^6.11.1",
         "vue-cookies": "^1.8.1",
         "vue-tel-input": "^8.1.1",
+        "vue3-popper": "^1.5.0",
         "vuefire": "^3.1.0"
     }
 }
