--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "propaganistas/laravel-phone": "^5.0",
         "sentry/sentry-laravel": "^3.2",
         "spatie/laravel-backup": "^8.1",
+        "spatie/laravel-json-api-paginate": "^1.13",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-multitenancy": "^3.0",
         "spatie/laravel-options": "^1.1",
