subscribe sns notifications 📬

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "ext-soap": "*",
         "ext-zlib": "*",
         "amrshawky/laravel-currency": "^6.0",
+        "aws/aws-php-sns-message-validator": "^1.8",
         "aws/aws-sdk-php": "^3.255",
         "aws/aws-sdk-php-laravel": "^3.8",
         "carlos-meneses/laravel-mpdf": "^2.1",
