--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "moment": "^2.29.4",
         "pinia": "^2.0.20",
         "qs": "^6.11.1",
+        "vue-collapsed": "^1.1.3",
         "vue-cookies": "^1.8.1",
         "vue-tel-input": "^8.1.1",
         "vue3-popper": "^1.5.0",
