--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
         "kreait/laravel-firebase": "^5.2",
+        "laravel-notification-channels/fcm": "^3.2",
         "laravel/framework": "^10",
         "laravel/horizon": "^5",
         "laravel/sanctum": "^3",
