PKA-932 Build google drive services

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "commerceguys/intl": "^1.1",
         "doctrine/dbal": "^3.5",
         "elasticsearch/elasticsearch": "^8.8",
+        "google/apiclient": "^2.12.1",
         "guzzlehttp/guzzle": "^7.2",
         "hisorange/browser-detect": "^4.5",
         "http-interop/http-factory-guzzle": "^1.2",
@@ -117,7 +118,10 @@
             "dont-discover": [
                 "laravel/telescope"
             ]
-        }
+        },
+        "google/apiclient-services": [
+            "Drive"
+        ]
     },
     "config": {
         "optimize-autoloader": true,
