--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "uuid": "^9.0.0",
         "vue-collapsed": "^1.1.3",
         "vue-cookies": "^1.8.1",
+        "vue-resizable": "^2.1.7",
         "vue-tel-input": "^8.1.1",
         "vue3-popper": "^1.5.0",
         "vuedraggable": "^4.1.0",
