--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "prettier": "^2.8.0",
+        "resize-observer-polyfill": "^1.5.1",
         "tailwindcss": "^3.1.0",
         "vite": "^4.3.8",
         "vue": "^3.2.31"
