--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,23 +7,20 @@ on:
 jobs:
   laravel-tests:
     name: Run backend tests 🧪
-    runs-on: [ self-hosted, linux, x64,testing ]
+    runs-on: [ self-hosted, linux, x64, testing ]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v35
       - name: Npm install
         run: npm ci
       - name: Composer install
         run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Prepare environment
         run:  |
-          ln -s ../../../../env.testing .env.testing
-          ln -s ../../../../env.testing .env
+          ln -s ../../../../env.aiku.testing .env.testing
+          ln -s ../../../../env.aiku.testing .env
       - name: Generate database dumps 📚
         run: ./generate_testing_db_dumps.sh ${{vars.TESTING_DB_PORT}}
       - name: Run test
