--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build && vite build --ssr",
+        "dev": "npm run dev.grp && npm run dev.public",
+        "build": "npm run build.grp && npm run build.public",
+        "dev.grp": "vite --config vite.grp.config.js",
+        "build.grp": "vite build --config vite.grp.config.js && vite build --config vite.grp.config.js --ssr",
+        "dev.public": "vite --config vite.public.config.js",
+        "build.public": "vite build --config vite.public.config.js && vite build --config vite.public.config.js --ssr",
         "test": "cypress open"
     },
     "devDependencies": {
@@ -34,8 +38,10 @@
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "@headlessui/vue": "^1.7.0",
         "@inertiajs/vue3": "^1.0.0",
+        "@kyvg/vue3-notification": "^3.0.2",
         "@revolist/revo-dropdown": "^2.0.1",
         "@revolist/vue3-datagrid": "^3.2.17",
+        "@sentry/vue": "^7.84.0",
         "@tiptap/extension-character-count": "^2.0.3",
         "@tiptap/extension-list-item": "^2.0.3",
         "@tiptap/extension-placeholder": "^2.0.3",
