test: Increase test coverage in SysAdmin - Auth tests 🧪

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=aiku
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_CENTRAL_DOMAIN=aiku.test
+APP_DOMAIN=aiku.test
 APP_URL=http://aiku.test
 
 LOG_CHANNEL=stack
