--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@vueform/multiselect": "^2.6.2",
         "@vuepic/vue-datepicker": "^5.1.1",
         "firebase": "^10.0.0",
+        "floating-vue": "^2.0.0-beta.24",
         "laravel-vue-i18n": "^2.2.2",
         "lodash-es": "^4.17.21",
         "moment": "^2.29.4",
