--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,10 @@ jobs:
           patchAll: true
       - name: Set release in .env
         run: |
-          sed -i~ '/^RELEASE=/s/=.*/="${{ steps.semver.outputs.next }}"/' ../../../../env.aiku.deploy
+          sed -i~ '/^RELEASE=/s/=.*/="${{ steps.semver.outputs.next }}"/' ../../../../env.aiku.production.deploy
       - name: Prepare environment
         run: |
-          ln -s ../../../../env.aiku.deploy .env
+          ln -s ../../../../env.aiku.production.deploy .env.aiku.production.deploy
       - name: Launch 🚀
         uses: deployphp/action@v1
         with:
