--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,10 +1,10 @@
-name: Deploy
+name: Deploy Aiku staging
 
 on:
   push:
     branches: [ "staging" ]
 
-concurrency: production_environment
+concurrency: staging_environment
 
 env:
   HOME: /home/devops
@@ -15,29 +15,32 @@ permissions:
 jobs:
   laravel-tests:
     name: Deploy aiku staging 🎭
-    runs-on: [ self-hosted, linux, x64 ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+            php-version: '8.2'
       - name: Composer install
         run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%T')"
-      - name: Set release in .env
+        run: echo "date=$(date +'%Y-%m-%d-%T')" >> $GITHUB_OUTPUT
+      - name: Set .env
         run: |
-          sed -i~ '/^RELEASE=/s/=.*/="${{ steps.date.outputs.date }}"/' ../../../../env.aiku.staging.deploy
-      - name: Prepare environment
-        run: |
-          ln -s ../../../../env.aiku.staging.deploy .env.aiku.staging.deploy
+          touch .env.aiku.staging.deploy
+          echo RELEASE=${{ steps.date.outputs.date }} >> .env.aiku.staging.deploy
+          echo DEPLOY_REMOTE_USER=${{ secrets.STAGING_DEPLOY_REMOTE_USER }} >> .env.aiku.staging.deploy
       - name: Launch 🚀
         uses: deployphp/action@v1
         with:
           dep: deploy staging
-          skip-ssh-setup: true
           ssh-config: ${{ secrets.DEPLOY_SSH_CONFIG }}
+          private-key: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
