refactor: PKA-617 add server to known hosts 🐛

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -38,6 +38,7 @@ jobs:
           dep: deploy staging
           ssh-config: ${{ secrets.DEPLOY_SSH_CONFIG }}
           private-key: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
+          known-hosts: ${{ secrets.DEPLOYER_KNOWN_HOSTS }}
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
